fix footer text-align

--- a/weiwei/task01/style/css1-2.css
+++ b/weiwei/task01/style/css1-2.css
@@ -181,3 +181,7 @@ textarea{
 	color:#fff;
 	cursor:pointer;
 }
+/* footer */
+footer{
+	text-align: center;
+}
